# driftlog

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  log.md  pyproject.toml
.github/workflows/: eval.yml
eval/: __init__.py  run_eval.py  test_behaviors.py
frontend/: app.js  index.html  styles.css
src/: config.py  database.py  main.py  models.py  schemas.py  tracing.py
src/generation/: generator.py  prompts.py
src/ingestion/: chunker.py  embedder.py  pipeline.py  transcriber.py
src/retrieval/: dense.py  fusion.py  reranker.py  sparse.py
