[project]
name = "driftlog"
version = "0.1.0"
description = "AI-powered travel knowledge system"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "psycopg[binary]>=3.2.0",
    "pgvector>=0.3.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
    "langchain-text-splitters>=0.3.0",
    "openai>=1.0.0",
    "anthropic>=0.39.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
]
