[project]
name = "driftlog"
version = "0.1.0"
description = "AI-powered travel knowledge system"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "psycopg[binary]>=3.2.0",
    "pgvector>=0.3.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
    "langchain-text-splitters>=0.3.0",
    "openai>=1.0.0",
    "langchain-openai>=0.2.0",
    "anthropic>=0.39.0",
    "rank-bm25>=0.2.2",
    "cohere>=5.0.0",
    "boto3>=1.35.0",
    "python-dateutil>=2.9.0",
    "datasets>=2.18.0",
    "ragas>=0.2.0",
    "asyncpg>=0.29.0",
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "streamlit>=1.40.0",
    "pandas>=2.0.0",
    "psycopg2-binary>=2.9.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
